--- a/urban.html
+++ b/urban.html
@@ -10,8 +10,19 @@
 
   <body class="portraitPage">
     <div class="portraitContainer">
-      <div class="mainNav">
-        <div class="name">Jason Lee</div>
+      <div class="navbar2">
+        <div class="left">
+          <div class="realleft">
+            <a href="index.html">Jason Lee</a>
+          </div>
+        </div>
+        <div class="right">
+          <div class="grid">
+            <a href="index.html">Home</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+          </div>
+        </div>
       </div>
       <div class="names"> <div="actual">Urban</div></div>
       <div class="imageContainer">
