--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,37 @@
+<!DOCTYPE html>
+<html>
+<html lang="en" dir="ltr">
+<head>
+	<meta charset="utf-8">
+	<title> Jason Lee | urban </title>
+	<link rel="stylesheet" href="style.css">
+</head>
+
+
+<body>
+
+	<div class="navbar2">
+		<div class="left">
+			<div class="realleft">
+				<a href="index.html">Jason Lee</a>
+			</div>
+		</div>
+		<div class="right">
+			<div class="grid">
+				<a href="index.html">Home</a>
+				<a href="contact.html">Contact</a>
+				<a href="about.html">About</a>
+			</div>
+		</div>
+	</div>
+
 <div class="contact-title">
 		<h1>Contact Us</h1>
 	</div>
 
 	<div class="contact-form">
 		<form id="contact-form" method="post" action="">
+
 
 			<input name="name" type="text" class="form-control" placeholder="Name" required><br>
 
@@ -16,3 +44,6 @@
 		</form>
 
 	</div>
+
+</body>
+</html>
