--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
 		</div>
 	</div>
 
-<div class="contact-title">
-		<h1>Contact Us</h1>
+<div class="names">
+		Contact Us
 	</div>
 
 	<div class="contact-form">
