--- a/nature.html
+++ b/nature.html
@@ -24,7 +24,11 @@
           </div>
         </div>
       </div>
-      <div class="names"> <div="actual">Nature </div></div>
+      <div class="names">
+        <a href="portrait.html" class="actual"> < </a>
+        <div class="actual">Nature </div>
+        <a href="urban.html" class="actual"> > </a>
+      </div>
       <div class="imageContainer">
         <img src="imgs/nature/one.jpg" alt="">
         <img src="imgs/nature/two.jpg" alt="">
