--- a/portrait.html
+++ b/portrait.html
@@ -24,7 +24,11 @@
           </div>
         </div>
       </div>
-      <div class="names"> <div="actual">Portraits </div></div>
+      <div class="names">
+        <a href="urban.html" class="actual"> < </a>
+        <div class="actual">Portraits </div>
+        <a href="nature.html" class="actual"> > </a>
+      </div>
       <div class="imageContainer">
         <img src="imgs/portraits/first.jpg" alt="">
         <img src="imgs/portraits/two.jpg" alt="">
