--- a/urban.html
+++ b/urban.html
@@ -24,7 +24,11 @@
           </div>
         </div>
       </div>
-      <div class="names"> <div="actual">Urban</div></div>
+      <div class="names">
+        <a href="nature.html" class="actual"> < </a>
+        <div class="actual"> Urban </div>
+        <a href="portrait.html" class="actual"> > </a>
+      </div>
       <div class="imageContainer">
         <img src="imgs/urban/one.jpg" alt="">
         <img src="imgs/urban/two.jpg" alt="">
