--- a/nature.html
+++ b/nature.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title> Jason Lee | nature </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
   </head>
 
   <body class="portraitPage">
@@ -30,20 +31,26 @@
         <a href="urban.html" class="actual"> > </a>
       </div>
       <div class="imageContainer">
-        <img src="imgs/nature/one.jpg" alt="">
-        <img src="imgs/nature/two.jpg" alt="">
-        <img src="imgs/nature/three.jpg" alt="">
-        <img src="imgs/nature/six.jpg" alt="">
-        <img src="imgs/nature/five.jpg" alt="">
-        <img src="imgs/nature/four.jpg" alt="">
-        <img src="imgs/nature/seven.jpg" alt="">
-        <img src="imgs/nature/eight.jpg" alt="">
-        <img src="imgs/nature/nine.jpg" alt="">
-        <img src="imgs/nature/ten.jpg" alt="">
-        <img src="imgs/nature/eleven.jpg" alt="">
-        <img src="imgs/nature/twelve.jpg" alt="">
+        <a data-fancybox="gallery" href="imgs/nature/one.jpg" data-options='{"caption" : "45.586547, -122.761176"}'><img src="imgs/nature/one.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/two.jpg" data-options='{"caption" : "45.891986, -123.963508"}'><img src="imgs/nature/two.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/three.jpg" data-options='{"caption" : "34.502204, -119.867892"}'><img src="imgs/nature/three.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/six.jpg" data-options='{"caption" : "34.416789, -119.885930"}'><img src="imgs/nature/six.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/five.jpg" data-options='{"caption" : "34.501427, -119.857953"}'><img src="imgs/nature/five.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/four.jpg" data-options='{"caption" : "34.742360, -119.984885"}'><img src="imgs/nature/four.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/seven.jpg" data-options='{"caption" : "37.756775, -119.596895"}'><img src="imgs/nature/seven.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/eight.jpg" data-options='{"caption" : "34.001199, -118.806412"}'><img src="imgs/nature/eight.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/nine.jpg" data-options='{"caption" : "35.011899, -120.624244"}'><img src="imgs/nature/nine.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/ten.jpg" data-options='{"caption" : "44.132415, -124.124688"}'><img src="imgs/nature/ten.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/eleven.jpg" data-options='{"caption" : "35.189788, -119.863304"}'><img src="imgs/nature/eleven.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/nature/twelve.jpg" data-options='{"caption" : "35.228472, 139.035710"}'><img src="imgs/nature/twelve.jpg" alt=""></a>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.10.0/rellax.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
   </body>
 
 
