--- a/portrait.html
+++ b/portrait.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
 <html lang="en" dir="ltr">
 
   <head>
     <meta charset="utf-8">
     <title> Jason Lee | Portraits </title>
     <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
   </head>
 
   <body class="portraitPage">
@@ -30,20 +30,26 @@
         <a href="nature.html" class="actual"> > </a>
       </div>
       <div class="imageContainer">
-        <img src="imgs/portraits/first.jpg" alt="">
-        <img src="imgs/portraits/two.jpg" alt="">
-        <img src="imgs/portraits/thirds.jpg" alt="">
-        <img src="imgs/portraits/six.jpg" alt="">
-        <img src="imgs/portraits/five.jpg" alt="">
-        <img src="imgs/portraits/b3.jpg" alt="">
-        <img src="imgs/portraits/seven.jpg" alt="">
-        <img src="imgs/portraits/dach.jpg" alt="">
-        <img src="imgs/portraits/nine.jpg" alt="">
-        <img src="imgs/portraits/ten.jpg" alt="">
-        <img src="imgs/portraits/eleven.jpg" alt="">
-        <img src="imgs/portraits/twelve.jpg" alt="">
+        <a data-fancybox="gallery" href="imgs/portraits/first.jpg" data-options='{"caption" : "40.731976, -73.998582"}'><img src="imgs/portraits/first.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/two.jpg" data-options='{"caption" : "40.744971, -73.983174"}'><img src="imgs/portraits/two.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/thirds.jpg" data-options='{"caption" : "34.502128, -119.867708"}'><img src="imgs/portraits/thirds.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/six.jpg" data-options='{"caption" : "40.701545, -73.995986"}'><img src="imgs/portraits/six.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/five.jpg" data-options='{"caption" : "40.717297, -74.016239"}'><img src="imgs/portraits/five.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/b3.jpg" data-options='{"caption" : "34.118259, -118.300284"}'><img src="imgs/portraits/b3.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/seven.jpg" data-options='{"caption" : "34.001172, -118.806404"}'><img src="imgs/portraits/seven.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/dach.jpg" data-options='{"caption" : "34.045468, -118.247691"}'><img src="imgs/portraits/dach.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/nine.jpg" data-options='{"caption" : "41.041009, -75.130013"}'><img src="imgs/portraits/nine.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/ten.jpg" data-options='{"caption" : "36.001515, -78.938418"}' ><img src="imgs/portraits/ten.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/eleven.jpg" data-options='{"caption" : "40.731146, -73.998096"}'><img src="imgs/portraits/eleven.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/portraits/twelve.jpg" data-options='{"caption" : "40.742110, -73.979881"}'><img src="imgs/portraits/twelve.jpg" alt=""></a>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.10.0/rellax.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
   </body>
 
 
