--- a/urban.html
+++ b/urban.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title> Jason Lee | urban </title>
     <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
   </head>
 
   <body class="portraitPage">
@@ -30,20 +31,26 @@
         <a href="portrait.html" class="actual"> > </a>
       </div>
       <div class="imageContainer">
-        <img src="imgs/urban/one.jpg" alt="">
-        <img src="imgs/urban/two.jpg" alt="">
-        <img src="imgs/urban/three.jpg" alt="">
-        <img src="imgs/urban/six.jpg" alt="">
-        <img src="imgs/urban/five.jpg" alt="">
-        <img src="imgs/urban/four.jpg" alt="">
-        <img src="imgs/urban/seven.jpg" alt="">
-        <img src="imgs/urban/eight.jpg" alt="">
-        <img src="imgs/urban/nine.jpg" alt="">
-        <img src="imgs/urban/ten.jpg" alt="">
-        <img src="imgs/urban/eleven.jpg" alt="">
-        <img src="imgs/urban/number.jpg" alt="">
+        <a data-fancybox="gallery" href="imgs/urban/one.jpg" data-options='{"caption" : "35.676730, 139.763750"}'><img src="imgs/urban/one.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/two.jpg" data-options='{"caption" : "40.759417, -73.979463"}'><img src="imgs/urban/two.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/three.jpg" data-options='{"caption" : "45.586547, -122.761176"}'><img src="imgs/urban/three.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/six.jpg" data-options='{"caption" : "37.566893, 127.010235"}'><img src="imgs/urban/six.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/five.jpg" data-options='{"caption" : "35.659437, 139.700523"}'>  <img src="imgs/urban/five.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/four.jpg" data-options='{"caption" : "40.711751, -74.011758"}'><img src="imgs/urban/four.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/seven.jpg" data-options='{"caption" : "35.714115, 139.797104"}'><img src="imgs/urban/seven.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/eight.jpg" data-options='{"caption" : "40.725608, -74.011367"}'><img src="imgs/urban/eight.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/nine.jpg" data-options='{"caption" : "40.759417, -73.979463"}'><img src="imgs/urban/nine.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/ten.jpg" data-options='{"caption" : "45.586547, -122.761176"}'><img src="imgs/urban/ten.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/eleven.jpg" data-options='{"caption" : "40.747513, -73.957801"}'><img src="imgs/urban/eleven.jpg" alt=""></a>
+        <a data-fancybox="gallery" href="imgs/urban/number.jpg" data-options='{"caption" : "40.704559, -73.992281"}'><img src="imgs/urban/number.jpg" alt=""></a>
       </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.10.0/rellax.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
   </body>
 
 
